[gd_scene load_steps=4 format=3 uid="uid://puffotwps4ew"]

[ext_resource type="Script" path="res://Autoloaded/AudioManager.gd" id="1_8cbpt"]
[ext_resource type="AudioStream" uid="uid://854g5jib208j" path="res://stasis_nD9iYNZM.wav" id="2_ncq3s"]
[ext_resource type="AudioStream" uid="uid://xua7hdlpt0rb" path="res://Dread.mp3" id="3_pmy7o"]

[node name="MenuMusicPlayer" type="Node2D"]
script = ExtResource("1_8cbpt")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ncq3s")
bus = &"Music"

[node name="AmbienceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pmy7o")
bus = &"Main"

[connection signal="finished" from="MenuMusic" to="." method="_on_menu_music_finished"]
[connection signal="finished" from="AmbienceAudio" to="." method="_on_ambience_audio_finished"]
